fsc-project/force-app/main/default/objects/FinancialAccount__c/FinancialAccount__c.object-meta.xml
<CustomObject>
    <label>Financial Account</label>
    <nameField>
        <label>Financial Account Name</label>
        <type>AutoNumber</type>
        <displayFormat>FA-{0000}</displayFormat>
    </nameField>
    <pluralLabel>Financial Accounts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>