fsc-project/force-app/main/default/objects/FinancialAccount__c/fields/AccountType__c.field-meta.xml
<CustomField>
    <fullName>AccountType__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>CHECKING</fullName><label>Checking</label><default>false</default></value>
            <value><fullName>SAVINGS</fullName><label>Savings</label><default>false</default></value>
            <value><fullName>INVESTMENT</fullName><label>Investment</label><default>false</default></value>
            <value><fullName>RETIREMENT</fullName><label>Retirement</label><default>false</default></value>
            <value><fullName>CREDIT</fullName><label>Credit</label><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>