fsc-project/force-app/main/default/objects/FinancialAccount__c/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <label>Balance</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>