fsc-project/force-app/main/default/objects/FinancialAccount__c/fields/ExternalAccountId__c.field-meta.xml
<CustomField>
    <fullName>ExternalAccountId__c</fullName>
    <label>External Account ID</label>
    <type>Text</type>
    <length>50</length>
    <externalId>true</externalId>
</CustomField>