fsc-project/force-app/main/default/objects/FinancialAccount__c/fields/LastSyncedDateTime__c.field-meta.xml
<CustomField>
    <fullName>LastSyncedDateTime__c</fullName>
    <label>Last Synced Date/Time</label>
    <type>DateTime</type>
</CustomField>